--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ parts =
 name = infi.nose_logbook
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['distribute', 'infi.recipe.console_scripts']
+install_requires = ['infi.recipe.console_scripts', 'logbook', 'distribute', 'nose']
 version_file = src/infi/nose_logbook/__version__.py
 description = Logbook integration for Nose
 long_description = Nose plug-in that configures Logbook to write the logs to the standard logging module
